feat(styles): changed h1 and h2 text

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <!-- Copy and paste your HTML from CodePen into here -->
+    <h1 class="h1">Sweden</h1>
+    <h2>A tribute page to the beautiful country of Sweden!</h2>
   </body>
 </html>
