--- a/about.html
+++ b/about.html
@@ -5,4 +5,8 @@
         <title>Sweden | Tribute Page | About</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
+
+    <body>
+        <h1 class="h1">About</h1>
+    </body>
 </html>
