--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Sweden | Tribute Page</title>
+    <title>Sweden | Tribute Page | Home</title>
     <!-- The line below links your html document to your css stylesheet -->
     <link rel="stylesheet" href="styles.css" />
   </head>
@@ -10,5 +10,10 @@
     <!-- Copy and paste your HTML from CodePen into here -->
     <h1 class="h1">Sweden</h1>
     <h2>A tribute page to the beautiful country of Sweden!</h2>
+    <p>
+      <ul>
+        <a href=about.html>About</a>
+      </ul>
+    </p>
   </body>
 </html>
