feat(index): added link to midsommar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>
       <ul>
         <a href=about.html>About</a>
+        <a href=midsommar.html>Midsommar</a>
       </ul>
     </p>
   </body>
