--- a/abba.html
+++ b/abba.html
@@ -7,6 +7,20 @@
     </head>
 
     <body>
-        <h1 class="site-title">ABBA</h1>
+        <div>
+            <h1 class="site-title">A<span class="reverse-b">B</span>BA
+            </h1>
+        </div>
+
+        <div class="navigation-bar">
+            <li><a href=index.html>Home</a></li>
+            <li><a href=about.html>About</a></li>
+            <li><a href=midsommar.html>Midsommar</a></li>
+            <li><a href=ikea.html>Ikea</a></li>
+        </div>
+
+        <div class="general-text">
+            <p>ABBA are a Swedish pop group that were formed in 1972. ABBA won the Eurovision Song contest in 1974 and became Sweden's first ever winners with the song "Waterloo", becoming overnight sensations. Over the course of their career they have released 9 studio albums together, 8 before they split in 1982 and the most recent one in 2021 after reconciling to record a new album. With hundreds of millions of records sold worldwide, they are one of the most biggest-selling music acts of all-time. The musical, Mamma Mia!, based on their hit catalog, opened in London in 1999 and in New York on 2001. Both productions are among the most successful musicals ever on the West End and Broadway. A movie version also called Mamma Mia! was released in 2008. In the United Kingdom, Mamma Mia! grossed £69.2 million, it is also the fifteenth highest-grossing film of all time at the UK box office.</p>
+        </div>
     </body>
 </html>
