Feat(index): added links and image

--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <title>Sweden | Tribute Page | Home</title>
-    <!-- The line below links your html document to your css stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <!-- Copy and paste your HTML from CodePen into here -->
-    <h1 class="h1">Sweden</h1>
-    <h2>A tribute page to the beautiful country of Sweden!</h2>
-    <p>
-      <ul>
-        <a href=about.html>About</a>
-        <a href=midsommar.html>Midsommar</a>
-      </ul>
-    </p>
-  </body>
+
+<head>
+  <title>Sweden | Tribute Page | Home</title>
+  <!-- The line below links your html document to your css stylesheet -->
+  <link rel="stylesheet" href="styles.css" />
+</head>
+
+<body>
+  <!-- Copy and paste your HTML from CodePen into here -->
+  <div>
+    <h1 class="site-title">Sweden</h1>
+    <h2 class="site-sub-title">A tribute page to the beautiful country of Sweden!</h2>
+  </div>
+  <div>
+    <ul class="navigation-bar">
+      <li><a href=about.html>About</a></li>
+      <li><a href=midsommar.html>Midsommar</a></li>
+      <li><a href=abba.html>ABBA</a></li>
+      <li><a href=ikea.html>Ikea</a></li>
+    </ul>
+  </div>
+  <div class="image-container">
+      <img
+        src="https://media.istockphoto.com/photos/old-town-in-stockholm-sweden-picture-id506175664?k=20&m=506175664&s=612x612&w=0&h=GPuFSXyGNnLoeC7wVQRoZGvjtG46sMCtUEfYVYQvOZg="
+        alt="Swedish City Scenery">
+  </div>
+</body>
+
 </html>
