Feat(midsommar): Added links, main text and image

--- a/midsommar.html
+++ b/midsommar.html
@@ -7,6 +7,27 @@
     </head>
 
     <body>
-        <h1 class="h1">Midsommar</h1>
+        <div>
+            <h1 class="site-title">Midsommar</h1>
+        </div>
+
+        <div class="navigation-bar">
+            <li><a href=index.html>Home</a></li>
+            <li><a href=about.html>About</a></li>
+            <li><a href=abba.html>ABBA</a></li>
+            <li><a href=ikea.html>Ikea</a></li>
+        </div>
+
+        <div class="general-text">
+            <p>Midsommar is the Swedish midsummer celebration that happens every year. The midsommarstång (or maypole) is decorated in green foliage garlands and lots of flowers, ready for people to dance around. One notable dance is the Små grodorna (The Little Frogs) dance, where people hop around like frogs whilst singing along. There is also usually a Midsommar lunch consisting of many items, including favourites such as gravlax or salmon, new potatoes with dill, sour cream and chives, and, of course, sill (pickled herring).</p>
+        </div>
+
+        <div class="general-text">
+            <p>Legend has it that the night before Midsummer’s Day is a magical time for love. Ancient tradition says that if a young woman puts seven different flowers under her pillow on the night to Midsummer Day, she will dream of her future partner.</p>
+        </div>
+        
+        <div class="image-container">
+            <img src="https://i.pinimg.com/originals/8d/9d/96/8d9d96ad2035aaa8ba6a5bc9d00da020.jpg" alt="Decorated Midsommar pole">
+        </div>
     </body>
 </html>
