Feat(ikea): Added title and links

--- a/ikea.html
+++ b/ikea.html
@@ -7,6 +7,15 @@
     </head>
 
     <body>
-        <h1 class="site-title">Ikea</h1>
+        <div>
+            <h1 class="site-title">Ikea</h1>
+        </div>
+
+        <div class="navigation-bar">
+            <li><a href=index.html>Home</a></li>
+            <li><a href=about.html>About</a></li>
+            <li><a href=midsommar.html>Midsommar</a></li>
+            <li><a href=abba.html>ABBA</a></li>
+        </div>
     </body>
 </html>
