Feat(about): added links and main text

--- a/about.html
+++ b/about.html
@@ -7,6 +7,20 @@
     </head>
 
     <body>
-        <h1 class="h1">About</h1>
+        <div>
+            <h1 class="site-title">About</h1>
+        </div>
+
+        <div class="navigation-bar">
+            <li><a href=index.html>Home</a></li>
+            <li><a href=midsommar.html>Midsommar</a></li>
+            <li><a href=abba.html>ABBA</a></li>
+            <li><a href=ikea.html>Ikea</a></li>
+        </div>
+
+        <div>
+            <p class="general-text">Sweden is a country in Scandinavia with a population of 10.35 million. It borders Norway and Finland and is also connected to Denmark via a bridge-tunnel in the South-West. The capital city of Sweden is Stockholm, which is built across 14 islands.</p>
+        </div>
     </body>
+
 </html>
