feat: finalised page

--- a/ikea.html
+++ b/ikea.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Sweden | Tribute Page | Ikea</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
 
-    <body>
-        <div>
-            <h1 class="site-title">Ikea</h1>
-        </div>
+<head>
+    <title>Sweden | Tribute Page | Ikea</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
 
-        <div class="navigation-bar">
-            <li><a href=index.html>Home</a></li>
-            <li><a href=about.html>About</a></li>
-            <li><a href=midsommar.html>Midsommar</a></li>
-            <li><a href=abba.html>ABBA</a></li>
-        </div>
-    </body>
+<body>
+    <div>
+        <h1 class="site-title">Ikea</h1>
+    </div>
+
+    <ul class="navigation-bar">
+        <li><a href=index.html>Home</a></li>
+        <li><a href=about.html>About</a></li>
+        <li><a href=midsommar.html>Midsommar</a></li>
+        <li><a href=abba.html>ABBA</a></li>
+        <li><a href=ikea.html>Ikea</a></li>
+    </ul>
+
+    <div class="ikea-container">
+        <p class="general-text text-box">IKEA was founded by Ingvar Kamprad in 1943 and came to life as a mail order
+            catalogue business in the
+            forested town of Älmhult, Sweden. Today, it is a global home furnishing brand that brings affordability,
+            design and comfort to people all over the world. The IKEA vision is “To create a better everyday life for
+            the many people.”, not just with their furniture but also with sustainability and the environment. Their
+            business idea is “to offer a wide range of well-designed, functional home furnishing products at prices so
+            low that as many people as possible will be able to afford them.”<br /><br />
+
+            The furniture is simplistic and
+            minimalistic, much like most Scandinavian style interiors. I personally love that you can get such
+            functional items at such low prices and they actually look nice in your home too. Also, who doesn't love a
+            hot dog (or varmkorv in Swedish) as they're leaving IKEA, it's an absolute must!!
+        </p>
+        <img src="https://gbl-sc9u2-prd-cdn.azureedge.net/-/media/aboutikea/images/homepage/2022/large-ikea-logo-on-ikea-store-wall-ai00-pe315126-ikea-l-52ce2ebb/large-ikea-logo-on-ikea-store-wall-ai00-pe315126-ikea-l-52ce2ebb-figure-image-mobile?rev=1cb677c4db0c46d09985692996fbcf0e"
+            class="image-ikea">
+    </div>
+</body>
+
 </html>
