--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </div>
   <div>
     <ul class="navigation-bar">
+      <li><a href=index.html>Home</a></li>
       <li><a href=about.html>About</a></li>
       <li><a href=midsommar.html>Midsommar</a></li>
       <li><a href=abba.html>ABBA</a></li>
@@ -23,9 +24,9 @@
     </ul>
   </div>
   <div class="image-container">
-      <img
-        src="https://media.istockphoto.com/photos/old-town-in-stockholm-sweden-picture-id506175664?k=20&m=506175664&s=612x612&w=0&h=GPuFSXyGNnLoeC7wVQRoZGvjtG46sMCtUEfYVYQvOZg="
-        alt="Swedish City Scenery">
+    <img
+      src="https://media.istockphoto.com/photos/old-town-in-stockholm-sweden-picture-id506175664?k=20&m=506175664&s=612x612&w=0&h=GPuFSXyGNnLoeC7wVQRoZGvjtG46sMCtUEfYVYQvOZg="
+      alt="Swedish City Scenery">
   </div>
 </body>
 
