--- a/midsommar.html
+++ b/midsommar.html
@@ -1,33 +1,51 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Sweden | Tribute Page | Midsommar</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
 
-    <body>
-        <div>
-            <h1 class="site-title">Midsommar</h1>
-        </div>
+<head>
+    <title>Sweden | Tribute Page | Midsommar</title>
+    <link rel="stylesheet" href="styles.css" />
+</head>
 
-        <div class="navigation-bar">
-            <li><a href=index.html>Home</a></li>
-            <li><a href=about.html>About</a></li>
-            <li><a href=abba.html>ABBA</a></li>
-            <li><a href=ikea.html>Ikea</a></li>
-        </div>
+<body>
+    <div>
+        <h1 class="site-title">Midsommar</h1>
+    </div>
 
-        <div class="general-text">
-            <p>Midsommar is the Swedish midsummer celebration that happens every year. The midsommarstång (or maypole) is decorated in green foliage garlands and lots of flowers, ready for people to dance around. One notable dance is the Små grodorna (The Little Frogs) dance, where people hop around like frogs whilst singing along. There is also usually a Midsommar lunch consisting of many items, including favourites such as gravlax or salmon, new potatoes with dill, sour cream and chives, and, of course, sill (pickled herring).</p>
-        </div>
+    <ul class="navigation-bar">
+        <li><a href=index.html>Home</a></li>
+        <li><a href=about.html>About</a></li>
+        <li><a href=midsommar.html>Midsommar</a></li>
+        <li><a href=abba.html>ABBA</a></li>
+        <li><a href=ikea.html>Ikea</a></li>
+    </ul>
 
-        <div class="general-text">
-            <p>Legend has it that the night before Midsummer’s Day is a magical time for love. Ancient tradition says that if a young woman puts seven different flowers under her pillow on the night to Midsummer Day, she will dream of her future partner.</p>
+    <div class="midsommar-container">
+        <div class="midsommar-container-image">
+            <p class="general-text text-box-midsommar-left">Midsommar is the Swedish midsummer celebration that happens
+                every year. The midsommarstång (or maypole) is
+                decorated in green foliage garlands and lots of flowers, ready for people to dance around. One notable
+                dance
+                is the Små grodorna (The Little Frogs) dance, where people hop around like frogs whilst singing along.
+                There
+                is also usually a Midsommar lunch consisting of many items, including favourites such as gravlax or
+                salmon,
+                new potatoes with dill, sour cream and chives, and, of course, sill (pickled herring).</p>
+            <img src="https://visitskane.com/sites/default/files/styles/header_top_xx_large/public/images/articles/2018-01/Dans-runt-midsommarst%C3%A5ngen_%C2%A9%20carolina_romare_7K3A0889_toppbild.jpg?itok=7mLKrY4j"
+                class="image-midsommar image-midsommar-left" alt="Decorated Midsommar pole">
         </div>
-        
-        <div class="image-container">
-            <img src="https://i.pinimg.com/originals/8d/9d/96/8d9d96ad2035aaa8ba6a5bc9d00da020.jpg" alt="Decorated Midsommar pole">
+        <div class="midsommar-container-image">
+            <p class="general-text text-box-midsommar-right">Legend has it that the night before Midsummer’s Day is a
+                magical time for love. Ancient tradition says that
+                if a young woman puts seven different flowers under her pillow on the night to Midsummer Day, she will
+                dream
+                of her future partner.</p>
+            <img src="https://i.pinimg.com/originals/8d/9d/96/8d9d96ad2035aaa8ba6a5bc9d00da020.jpg"
+                class="image-midsommar image-midsommar-right" alt="Decorated Midsommar pole">
         </div>
-    </body>
+    </div>
+
+
+</body>
+
 </html>
